kenig8649: BJS2-68083 fix по ПР. Коллекционируем пользователей.